SBVTestSuite/TestSuite/CompileTests/SCase/SCase02.stderr
SCase02.hs:11:14: error: [GHC-39584]
    " sCase: Pattern match(es) are non-exhaustive.
        Not matched     : Var
        Patterns of type: Expr
        Must match each : Zero, Num, Var, Add, Let

      You can use a '_' to match multiple cases.

    " In the quasi-quotation:
        [sCase|Expr e of
        Zero  -> 0
        Num i -> i
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

